# danish-foundation-models

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CNAME  Dockerfile.dev  LICENSE  README.md  citation.cff  environment.yml  index.html  literature.md  litterature.md  makefile  mkdocs.yml  model_config.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sweep_config.json  test-dataset-plan.md  train.py  train_tokenizer.py  ucloud_requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: black_formatter.yml  documentation.yml  lint-and-build-and-test.yml  lint-and-build-dev-container.yml  pre-commit.yml  pytest.yml  static_type_checks.yml  test.yml  type-check.yml
archive_v1/: requirements.txt
blog/: index.html
commoncrawl/: download.py  download_groups.py  download_s3.py  process_index.py  requirements.txt  retry_transport.py  wget_index.sh
configs/: bert-base_config.json  deberta-v2-small_config.json
data-processing/: pyproject.toml
data-processing/scripts/: convert_ai_aktindsigt_to_jsonlgz.py  convert_colossal_oscar_10_to_jsonlgz.py  convert_dagw_to_jsonlgz.py  convert_domsdatabasen_to_jsonlgz.py  convert_dr_facebook_to_jsonlgz.py  convert_eur_lex_da_to_jsonlgz.py  convert_ft_speech_to_jsonlgz.py  convert_hplt_to_jsonlgz.py  convert_infomedia_to_jsonlgz.py  convert_lexdk_to_jsonlgz.py  convert_mC4_to_jsonlgz.py  convert_memo_to_jsonlgz.py  convert_ncc_to_jsonlgz.py  convert_nordjyllandnews_to_jsonlgz.py  convert_scandi_reddit_to_jsonlgz.py  convert_scandi_wiki_to_jsonlgz.py  convert_scrape_hovedstaden_to_jsonl.py  convert_swedish_gigaword_to_jsonl.py  convert_swedish_gigaword_to_jsonlgz.py  dataset_validator.py  datatrove_minhash_dedupe_local.py  dolma_domain_count.py  dolma_url_count.py  domain_counter.py  merge_domain_summaries.py  split.py  tokenize_jsonl.py
datasheets/augmented_dagw/: index.html
datasheets/dagw-adl/: index.html
datasheets/dagw-botxt/: index.html
datasheets/dagw-dannet/: index.html
datasheets/dagw-depbank/: index.html
datasheets/dagw-ep/: index.html
datasheets/dagw-ft/: index.html
datasheets/dagw-gutenberg/: index.html
datasheets/dagw-hest/: index.html
datasheets/dagw-jvj/: index.html
datasheets/dagw-naat/: index.html
datasheets/dagw-relig/: index.html
datasheets/dagw-retsinformationdk/: index.html
datasheets/dagw-retspraksis/: index.html
datasheets/dagw-skat/: index.html
datasheets/dagw-spont/: index.html
datasheets/dagw-synne/: index.html
datasheets/dagw-tv2r/: index.html
datasheets/dagw-wiki/: index.html
datasheets/dagw-wikibooks/: index.html
datasheets/dagw-wikisource/: index.html
datasheets/danews/: index.html
datasheets/danews2.0/: index.html
datasheets/daradio/: index.html
datasheets/dbc-abstracts/: index.html
datasheets/dbc-faktalink/: index.html
datasheets/dbc-forfatterweb/: index.html
datasheets/dbc-reviews/: index.html
datasheets/hopetwitter/: index.html
datasheets/memo/: index.html
datasheets/netarkivet_text/: index.html
datasheets/nordjylland_news/: index.html
datasheets/scrape_hovedstaden/: index.html
datasheets/swedish_gigaword/: index.html
dcc/: index.html
default-models-configs/: base-deberta-v2-32000-config.json  large-deberta-v2-32000-config.json  small-deberta-v2-32000-config.json  small-deberta-v2-50000-config.json  small-roberta-128000-config.json  small-roberta-50000-config.json  small-roberta-config.json
dev/pytest-coverage/: .coveragerc  run_coverage.py
dfm/: train.py
dfm/cleaning/: __init__.py  deduper.py  profanity_filter.py  quality.py  quality_filter.py
dfm/data/: __init__.py  dedupe.py  deduper.py  hate_speech.py  load.py  utils.py
dfm/description/: __init__.py  description_pattern_lists.py  description_patterns.py  gen_description.py  matchcounter.py
dfm/modelling/: data_collators.py  model_types.py  preprocess.py  utils.py
dfm/tokenizers/: __init__.py  train_tokenizer.py
docs/: Adding_a_new_dataset  Netarkivet_text.md  dagw_reddit.md  danews.md  datasets-netarkivet.md  dcc.md  hopetwitter.md  index.md  intercoder_reliability.md  logs_dfm-bert-base.md  logs_training_v2.md  model_card.md  models.md  models_speech.md  models_text.md  train_on_ucloud.md  twitter.md
docs/datasheets/: Netarkivet_text.md  augmented_dagw.md  dagw-adl.md  dagw-botxt.md  dagw-dannet.md  dagw-depbank.md  dagw-ep.md  dagw-ft.md  dagw-gutenberg.md  dagw-hest.md  dagw-jvj.md  dagw-naat.md  dagw-relig.md  dagw-retsinformationdk.md  dagw-retspraksis.md  dagw-skat.md  dagw-spont.md  dagw-synne.md  dagw-tv2r.md  dagw-wiki.md  dagw-wikibooks.md  dagw-wikisource.md  danews.md  danews2.0.md  daradio.md  dbc-abstracts.md  dbc-faktalink.md  dbc-forfatterweb.md  dbc-reviews.md  hopetwitter.md  memo.md  netarkivet_text.md  nordjylland_news.md  scrape_hovedstaden.md  swedish_gigaword.md  trustllm_template.md
docs/desc_stats/: timestamp_counts.csv
docs/taggers_stats/: taggers_speed.md
docs/tutorials/: finetune.ipynb  finetune_qlora.ipynb  merge.ipynb
evaluation/: benchmark_throughput.py  eval.sh  make_venv.sh
intercoder_reliability/: index.html
models/: index.html
models/daberta-v3/: pretraining.json  tokenizer_config.json
scripts/data/: convert_dataset_json.py  hplt_to_dolma_format.py  jsonl_to_mds.py
scripts/lumi/: README.md  continue_mistral_mosaic.sh  make_venv.sh  requirements.txt
search/: search_index.json
src/: __init__.py  tokeniser_config.py  tokenisers.py  tokenizer_config.py  train_tokeniser.py  train_tokenizer.py
src/application/: check_list.py  content_filter_lang_netarkivet.py  content_filter_netarkivet.py  content_filtering_profanity.py
src/applications/: check_gpu.py  create_duplicate_dict.py  examine_dataset.py  (+1 more)
tests/: cleaning_test.py  datasets_test.py  description_tests.py  tokenisers_test.py  tokenizers_test.py
training/: README.md  continue_mistral_mosaic.sh  convert_ckpt.py  convert_dcp_to_hf.py  count_tokens.py  eval.sh  make_venv.sh  mosaic_in_container.sh  submit.py
tutorials/: convert_notebooks.sh
(+330 files in other folders)
