[project]
name = "dfm"
version = "2.0.0"
description = "Code for the Danish Foundation Models"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.4.2",                                                                         # dolma does not work with very old versions of pydantic
  "datasets>=2.4.0",
  "dolma[pii,code]@git+https://github.com/allenai/dolma.git@28727302a34225f4ce70ce97940cb18ad9a91583", # Install from git until a 0.9.2 package is released
  "kenlm>=0.2.0", # Used for perplexity tagging
  "blingfire>=0.1.8", # Used for perplexity tagging
  "requests>=2.31.0",
  "polars>0.19.1",
]

[project.optional-dependencies]
dev = ["black==23.9.1", "ruff==0.1.0", "pyright==1.1.331", "pre-commit==3.5.0"]
docs = [
  "mkdocs-jupyter==0.24.6",
  "mkdocs-material==9.5.3",
  "mkdocstrings[python]==1.8.0",
]
test = ["pytest==6.2.5", "pytest-lazy-fixture==0.6.3", "pytest-cov==2.8.1"]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pyright]
exclude = ["**/.*venv*", ".tox", "build"]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"

[tool.ruff]
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "Q",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "TCH",
  "W",
]
ignore = ["ANN101", "ANN401", "B007", "E402", "E501", "F401", "F841", "RET504"]
ignore-init-module-imports = true
extend-exclude = ["archive_v1"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py",
  "docs/conf.py",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.isort]
known-third-party = ["wandb", "joblib"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"psycop/projects/restraint/model_evaluation/figures/feature_importance/shap/get_shap_values.py" = [
  "I001",
]
"psycop/projects/restraint/model_evaluation/data/load_true_data.py" = ["I001"]
"psycop/common/global_utils/cache.py" = ["I001"]

[tool.pytest.ini_options]
norecursedirs = [".venv", "*.egg-info", ".git", ".tox"]
