[project]
name = "danish-foundation-models"
version = "0.1.0"
description = "The documentation site for Danish Foundation Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-jupyter==0.24.6",
    "mkdocs-material==9.5.3",
    "mkdocstrings[python]==0.24.0",
]
license = { file = "LICENSE" }
