[metadata]
name = dfm
description = Code for the Danish Foundation models
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
include_package_data = true
python_requires = >=3.7
zip_safe = false
install_requires =
    wandb>=0.12.9,<0.13.0
    transformers>=4.20.0.,<4.21.0
    protobuf>=3.20.1,<=3.21.0
    tokenizers>=0.10.1,<0.13.0
    sentencepiece>=0.1.96,<0.2.0
    datasets>=2.3.2,<2.4.0
    ndjson>=0.3.1,<0.4.0
    datasketch>=1.5.6,<1.6.0
    more_itertools>=8.12.0,<8.13.0
    wasabi>=0.9.0,<0.10.0
    spacy>=3.1.4,<3.4.0
    torch>=1.6.0,<1.12.0
    scikit-learn>=1.1.1,<1.2.0


[options.extras_require]
ucloud_gpu=
    flax>=0.4.2,<0.5.0
    # tensorboard>=2.8.0,<2.10.0
    # tensorflow
    # pip install torch --extra-index-url https://download.pytorch.org/whl/cu113
    # pip install "jax[cuda11_cudnn82]" -f https://storage.googleapis.com/jax-releases/jax_releases.html
    # impossible to specify in setup.cfg:
    # see https://stackoverflow.com/questions/57689387/equivalent-for-find-links-in-setup-py

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True

[tool:pytest]
addopts=--verbose --durations=10 --color=yes -s -vv

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/_vendorized/*
    **/about.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True